Update cart/checkout/review/spec/variant